# openAPI.json
@@ -6,10 +6,10 @@
     },
     "servers": [
         {
-            "url": "http://localhost:3000/apis"
+            "url": "http://localhost:3000/apis/banking"
         },
         {
-            "url": "https://api.server.test/apis/banking/v0.1"
+            "url": "https://api.server.test/apis/banking/v1"
         }
     ],
     "components": {
@@ -119,7 +119,75 @@
         }
     },
     "paths": {
-        "/tokens/new": {
+        "/auth/register": {
+            "post": {
+                "description": "Register an account",
+                "operationId": "CreateAccount",
+                "parameters": [],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "description": "your name",
+                                        "example": "Joe Smith"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "jsmith@email.com"
+                                    },
+                                    "postalAddress": {
+                                        "description": "Postal address.",
+                                        "type": "object",
+                                        "properties": {
+                                            "addressLine": {
+                                                "items": {
+                                                    "type": "string",
+                                                    "minLength": 1,
+                                                    "maxLength": 70
+                                                },
+                                                "type": "array",
+                                                "description": "Information that locates and identifies a specific address, as defined by postal services, that is presented in free format text.",
+                                                "minItems": 0,
+                                                "maxItems": 5
+                                            },
+                                            "postCode": {
+                                                "description": "Identifier consisting of a group of letters and/or numbers that is added to a postal address to assist the sorting of mail.",
+                                                "type": "string",
+                                                "minLength": 1,
+                                                "maxLength": 16
+                                            },
+                                            "country": {
+                                                "description": "Nation with its own government, occupying a particular territory.",
+                                                "type": "string",
+                                                "pattern": "^[A-Z]{2,2}$"
+                                            }
+                                        },
+                                        "required": [
+                                            "country"
+                                        ]
+                                    },
+                                    "pan": {
+                                        "type": "number",
+                                        "description": "secret personal account number",
+                                        "pattern": "^[0-9]{5,5}$"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/auth/login": {
             "post": {
                 "description": "",
                 "parameters": [],
@@ -170,127 +238,9 @@
                 }
             }
         },
-        "/tokens/refresh": {
-            "post": {
-                "description": "",
-                "parameters": [],
-                "security": [],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "refresh": {
-                                        "type": "string"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "access": {
-                                            "type": "string"
-                                        },
-                                        "access_expires": {
-                                            "type": "integer"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/accounts": {
-            "post": {
-                "description": "Create an account",
-                "operationId": "CreateAccount",
-                "parameters": [],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "description": "your name",
-                                        "example": "Joe Smith"
-                                    },
-                                    "email": {
-                                        "type": "string",
-                                        "example": "jsmith@email.com"
-                                    },
-                                    "postalAddress": {
-                                        "description": "Postal address of a party.",
-                                        "type": "object",
-                                        "properties": {
-                                            "addressLine": {
-                                                "items": {
-                                                    "type": "string",
-                                                    "minLength": 1,
-                                                    "maxLength": 70
-                                                },
-                                                "type": "array",
-                                                "description": "Information that locates and identifies a specific address, as defined by postal services, that is presented in free format text.",
-                                                "minItems": 0,
-                                                "maxItems": 5
-                                            },
-                                            "postCode": {
-                                                "description": "Identifier consisting of a group of letters and/or numbers that is added to a postal address to assist the sorting of mail.",
-                                                "type": "string",
-                                                "minLength": 1,
-                                                "maxLength": 16
-                                            },
-                                            "country": {
-                                                "description": "Nation with its own government, occupying a particular territory.",
-                                                "type": "string",
-                                                "pattern": "^[A-Z]{2,2}$"
-                                            }
-                                        },
-                                        "required": [
-                                            "country"
-                                        ]
-                                    },
-                                    "pin": {
-                                        "type": "number",
-                                        "description": "secret pin number",
-                                        "pattern": "^[0-9]{5,5}$"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            },
+        "/account": {
             "get": {
-                "description": "",
-                "parameters": [],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/accounts/{AccountId}": {
-            "get": {
-                "description": "Get an Account",
+                "description": "Get account information",
                 "operationId": "GetAccount",
                 "parameters": [
                     {
@@ -318,7 +268,7 @@
                 }
             }
         },
-        "/accounts/{AccountId}/balances": {
+        "/account/balances": {
             "get": {
                 "description": "Get Account balances",
                 "operationId": "GetAccountBalances",
@@ -334,7 +284,7 @@
                 }
             }
         },
-        "/accounts/{AccountId}/direct-debits": {
+        "/account/direct-debits": {
             "get": {
                 "description": "Get Account Direct Debits",
                 "operationId": "GetAccountDD",
@@ -350,7 +300,7 @@
                 }
             }
         },
-        "/accounts/{AccountId}/transactions": {
+        "/account/transactions": {
             "get": {
                 "description": "Get Account Transactions",
                 "operationId": "GetAccountTransactions",
@@ -366,7 +316,7 @@
                 }
             }
         },
-        "/accounts/{AccountId}/products/cards": {
+        "/account/products/cards": {
             "post": {
                 "description": "Create a credit card application",
                 "parameters": [
@@ -396,7 +346,7 @@
                 }
             }
         },
-        "/accounts/{AccountId}/products/cards/{CardApplicationId}": {
+        "/account/products/cards/{CardApplicationId}": {
             "get": {
                 "description": "Get a credit card application",
                 "parameters": [
@@ -446,7 +396,7 @@
                 }
             }
         },
-        "/accounts/{AccountId}/payees": {
+        "/account/payees": {
             "get": {
                 "description": "Get list of payees",
                 "operationId": "GetAccountPayees",
@@ -495,7 +445,7 @@
                 }
             }
         },
-        "/accounts/{AccountId}/payees/{PayeeId}": {
+        "/account/payees/{PayeeId}": {
             "delete": {
                 "description": "",
                 "parameters": [],
@@ -506,7 +456,7 @@
                 }
             }
         },
-        "/accounts/{AccountId}/payments": {
+        "/account/payments": {
             "post": {
                 "description": "Create a payment to make a transfer or pay a bill.",
                 "parameters": [],
